--- a/SoccerWPF/MainWindow.xaml
+++ b/SoccerWPF/MainWindow.xaml
@@ -42,7 +42,12 @@
                 </Grid>
             </TabItem>
             <TabItem Header="Compare">
-                <Grid Background="#FFE5E5E5"/>
+                <Grid Background="#FFE5E5E5">
+                    <ComboBox x:Name="comboBoxTeam1" HorizontalAlignment="Left" Margin="116,61,0,0" VerticalAlignment="Top" Width="120"
+                              ItemsSource="{Binding Teams}" DisplayMemberPath="Name" SelectedValuePath="Name"/>
+                    <ComboBox x:Name="comboBoxTeam2" HorizontalAlignment="Left" Margin="301,61,0,0" VerticalAlignment="Top" Width="120"
+                              ItemsSource="{Binding Teams}" DisplayMemberPath="Name" SelectedValuePath="Name"/>
+                </Grid>
             </TabItem>
         </TabControl>
     </Grid>
