--- a/SoccerWPF/MainWindow.xaml
+++ b/SoccerWPF/MainWindow.xaml
@@ -44,12 +44,13 @@
             <TabItem Header="Compare">
                 <Grid Background="#FFE5E5E5">
                     <ComboBox x:Name="comboBoxTeam1" HorizontalAlignment="Left" Margin="116,61,0,0" VerticalAlignment="Top" Width="120"
-                              ItemsSource="{Binding Teams}" DisplayMemberPath="Name" SelectedValuePath="Name"/>
+                              ItemsSource="{Binding Teams}" DisplayMemberPath="Name" SelectedValuePath="Name" SelectedValue="{Binding Path=Team1}"/>
                     <ComboBox x:Name="comboBoxTeam2" HorizontalAlignment="Left" Margin="301,61,0,0" VerticalAlignment="Top" Width="120"
-                              ItemsSource="{Binding Teams}" DisplayMemberPath="Name" SelectedValuePath="Name"/>
+                              ItemsSource="{Binding Teams}" DisplayMemberPath="Name" SelectedValuePath="Name" SelectedValue="{Binding Path=Team2}"/>
                     <Button x:Name="buttonCompare" Content="Compare" Margin="191,129,776,346"
                             Command="{Binding CompareCommand}"
                             CommandParameter="{Binding}"/>
+                    <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="133,207,0,0" TextWrapping="Wrap" Text="{Binding CompareText}" VerticalAlignment="Top" Width="256" IsEnabled="False"/>
                 </Grid>
             </TabItem>
 
