--- a/SoccerWPF/MainWindow.xaml
+++ b/SoccerWPF/MainWindow.xaml
@@ -50,7 +50,7 @@
                     <Button x:Name="buttonCompare" Content="Compare" Margin="191,129,776,346"
                             Command="{Binding CompareCommand}"
                             CommandParameter="{Binding}"/>
-                    <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="133,207,0,0" TextWrapping="Wrap" Text="{Binding CompareText}" VerticalAlignment="Top" Width="256" IsEnabled="False"/>
+                    <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="116,255,0,0" TextWrapping="Wrap" Text="{Binding CompareText}" VerticalAlignment="Top" Height="133" Width="305"/>
                 </Grid>
             </TabItem>
 
