--- a/SoccerWPF/MainWindow.xaml
+++ b/SoccerWPF/MainWindow.xaml
@@ -53,7 +53,14 @@
                     <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="116,255,0,0" TextWrapping="Wrap" Text="{Binding CompareText}" VerticalAlignment="Top" Height="133" Width="305"/>
                 </Grid>
             </TabItem>
+            <TabItem Header="Stryktipset">
+                <Grid Background="#FFE5E5E5" Margin="0,0,-2,-1">
+                    <TextBlock x:Name="textblock2" HorizontalAlignment="Left" Margin="20,54,0,0" TextWrapping="Wrap" Text="{Binding Stryktipsstring}" VerticalAlignment="Top" Height="405" Width="497"/>
+                    <Button x:Name="button" Content="Hämta Stryktipset" HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Width="121" Height="29"
+                            Command="{Binding StryktipsCommand}" CommandParameter="{Binding}"/>
 
+                </Grid>
+            </TabItem>
         </TabControl>
     </Grid>
     <Window.Resources>
