Skapat en vymodell för varje funktion i GUI:t
Signed-off-by: Tobias Eriksson <tobi.eriksson@gmail.com>

--- a/SoccerWPF/View/MainWindow.xaml
+++ b/SoccerWPF/View/MainWindow.xaml
@@ -9,7 +9,7 @@
         Title="MainWindow" Height="606" Width="1138"
         Icon="../Resources/Icons/stryktipset.png">
     <Window.DataContext>
-        <viewModel:LeagueTableViewModel/>
+        <viewModel:MainWindowModel/>
     </Window.DataContext>
     <Grid>
         <Grid.RowDefinitions>
@@ -33,7 +33,6 @@
             <TabItem Header="Stryktipset">
                 <Grid Background="#FFE5E5E5" Margin="0,0,-2,-1">
                     <view:StryktipsetControl/>
-
                 </Grid>
             </TabItem>
         </TabControl>
