--- a/SoccerWPF/View/StryktipsetControl.xaml
+++ b/SoccerWPF/View/StryktipsetControl.xaml
@@ -6,8 +6,9 @@
              xmlns:local="clr-namespace:SoccerWPF.View"
              mc:Ignorable="d" >
     <Grid>
-        <TextBlock x:Name="textblock2" HorizontalAlignment="Left" Margin="20,54,0,0" TextWrapping="Wrap" Text="{Binding Stryktipsstring}" VerticalAlignment="Top" Height="405" Width="497"/>
+        <TextBlock x:Name="textblock2" HorizontalAlignment="Left" Margin="20,54,0,0" TextWrapping="Wrap" Text="{Binding StryktipsetModel.Stryktipsstring}" 
+                   VerticalAlignment="Top" Height="405" Width="497"/>
         <Button x:Name="button" Content="Hämta Stryktipset" HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Width="121" Height="29"
-                            Command="{Binding StryktipsCommand}" IsEnabled="{Binding CanExecuteStryktipset}"/>
+                            Command="{Binding StryktipsetModel.StryktipsCommand}" IsEnabled="{Binding StryktipsetModel.CanExecuteStryktipset}"/>
     </Grid>
 </UserControl>
