--- a/SoccerWPF/View/LeagueTableControl.xaml
+++ b/SoccerWPF/View/LeagueTableControl.xaml
@@ -4,11 +4,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SoccerWPF.View"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             mc:Ignorable="d">
     <Grid>
         <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalAlignment="Top" CanUserResizeColumns="False" CanUserResizeRows="False"
-                        ItemsSource="{Binding Path=LeagueTable.Rows}" AutoGenerateColumns="False" IsReadOnly="True">
+                        ItemsSource="{Binding Path=LeagueTableModel.LeagueTable.Rows}" AutoGenerateColumns="False" IsReadOnly="True">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Pos" Width="40" Binding="{Binding Position}"></DataGridTextColumn>
                 <DataGridTextColumn Header="Team" Width="120" Binding="{Binding Team.Name}"></DataGridTextColumn>
@@ -23,7 +22,7 @@
             </DataGrid.Columns>
         </DataGrid>
         <ComboBox x:Name="comboBox" Grid.ColumnSpan="2" Grid.Column="1" HorizontalAlignment="Left" Margin="10,17,0,0" VerticalAlignment="Top" Width="181"
-                   ItemsSource="{Binding Seasons}" DisplayMemberPath="Text" SelectedValuePath="Guid"
-                   SelectedValue="{Binding Path=SelectedSeason}"/>
+                   ItemsSource="{Binding LeagueTableModel.Seasons}" DisplayMemberPath="Text" SelectedValuePath="Guid"
+                   SelectedValue="{Binding Path=LeagueTableModel.SelectedSeason}"/>
     </Grid>
 </UserControl>
