--- a/SoccerWPF/View/MainWindow.xaml
+++ b/SoccerWPF/View/MainWindow.xaml
@@ -35,6 +35,11 @@
                     <view:StryktipsetControl/>
                 </Grid>
             </TabItem>
+            <TabItem Header="Team Info">
+                <Grid Background="#FFE5E5E5" Margin="0,0,-2,-1">
+                    <view:TeamInfoControl/>
+                </Grid>
+            </TabItem>
         </TabControl>
     </Grid>
     <Window.Resources>
